<resources>
    <string name="app_name">SellMokam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="counter">0</string>
    <string-array name="country_arrays">
        <item>Kuala Lumpur</item>
        <!-- <item>United States</item>
         <item>Indonesia</item>
         <item>France</item>
         <item>Italy</item>
         <item>Singapore</item>
         <item>New Zealand</item>
         <item>India</item>-->
    </string-array>
    <string name="content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
        Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="demo_text">It’s the one week of the year in which you get</string>
    <string name="demo_date">12/12/1212</string>
    <string name="demo_name">sharmin binta sayed</string>
    <string name="demo_address">Adabar, dhanmmondi, dhaka, bangladesh</string>
    <string name="demo_id">Account ID : 29324</string>
    <string name="demo_product_name">apple watch</string>
    <string name="demo_price">BDt 12000</string>
    <string name="product_name">product Name:</string>
    <string name="posted_on">Posted on :</string>
    <string name="location">location :</string>
    <string name="product_category">Product category :</string>
    <string name="product_sub_category">Product sub category :</string>
    <string name="market_place">Market place :</string>
    <string name="demo_market_place">Retail</string>
    <string name="product_condition">Product condition :</string>
    <string name="retails_market_price">Retails market price :</string>
    <string name="product_description">Product Description :</string>
    <string name="demo_phn">+880 195680111</string>
    <string name="demo_email">Sharmin@gmail.com</string>
    <string name="edit_profile">Edit profile</string>
    <string name="select_an_item">Select an item</string>
    <string name="select_country">Select country</string>
    <string name="select_state_province">Select state/province</string>
    <string name="select_district">Select district</string>
    <string name="select_police_station">Select police station</string>
    <string name="select_category">Select category</string>
    <string name="select_sub_category">Select sub category</string>
    <string name="warning_upload_image_one">Do not upload picture with water mark</string>
    <string name="warning_uploada_image_2">The First photo will be your main Image</string>
    <string name="take_photo">Take photo</string>
    <string name="from_gallery">From gallery</string>
    <string name="enter_your_product_name">Enter your product name</string>
    <string name="enter_your_product_description">Enter your product description</string>
    <string name="monthly_rate">Monthly rate</string>
    <string name="enter_monthly_rate">Enter monthly rate</string>
    <string name="fixed">Fixed</string>
    <string name="negotiable">negotiable</string>
    <string name="post_add">Post add</string>
    <string name="free_subscription">Free subscription</string>
    <string name="buy_packages">Buy packages</string>
    <string name="select_subscription_packages">Select subscription packages:</string>
    <string name="only_for_publicity">Only for publicity</string>
    <string name="slogan">Slogan</string>
    <string name="post_add">Post add</string>
</resources>