<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".post.payment.SubscriptionPageActivity">

    <RelativeLayout

        android:id="@+id/parent"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text"
            android:layout_marginTop="50dp"
            android:text="@string/select_an_item"
            style="@style/Caption"
            android:layout_width="match_parent"
            android:textAlignment="center"
            />
        <RadioGroup
            android:layout_centerInParent="true"
            android:layout_below="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.radiobutton.MaterialRadioButton
                style="@style/RadioButton"
                android:text="@string/free_subscription"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                style="@style/RadioButton"
                android:text="@string/buy_packages"
                />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:id="@+id/child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentStart="true"
            android:id="@+id/text2"
            android:layout_marginTop="50dp"
            android:text="@string/select_subscription_packages"
            style="@style/Caption"
            />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_below="@id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.radiobutton.MaterialRadioButton
                style="@style/RadioButton"
                android:text="@string/only_for_publicity"/>
        </RadioGroup>
        <TextView
            android:id="@+id/sub"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radio"
            android:layout_margin="5dp"
            android:text="@string/slogan"
            style="@style/Caption"
            />

        <ScrollView
            android:layout_marginTop="15dp"
            android:layout_below="@+id/sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:text="@string/post_add"
        style="@style/Button"
        android:layout_marginBottom="42dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp" />


</LinearLayout>