<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        app:cardElevation="5dp"
        android:layout_margin="7dp"
        style="@style/YourCardView"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <LinearLayout

            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



                <com.google.android.material.imageview.ShapeableImageView
                    style="@style/rectangleImageView"
                    android:contentDescription="@string/demo_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    />


            <LinearLayout
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:layout_alignParentStart="true"
                    android:maxLines="1"
                    android:text="@string/demo_product_name"
                    android:textSize="14sp"
                    style="@style/Caption" />
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_baseline_favorite_24"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginTop="7dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_alignParentStart="true"
                        android:textColor="@color/btn"
                        android:maxLines="1"
                        android:text="@string/demo_price"
                        style="@style/Caption" />
                    <TextView
                        android:layout_alignParentEnd="true"
                        android:maxLines="1"
                        android:text="@string/demo_date"
                        android:textSize="10sp"
                        style="@style/Caption"
                       />
                </RelativeLayout>


                <TextView
                    android:maxLines="1"
                    android:text="@string/demo_address"
                    style="@style/Caption" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>