<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        app:cardElevation="6dp"
        android:layout_margin="7dp"
        style="@style/YourCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/rectangleImageView"

                />

           <!-- <com.google.android.material.card.MaterialCardView
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:strokeColor="@color/stroke"
                app:strokeWidth="1dp">

                <ImageView
                    android:scaleType="fitCenter"
                    android:padding="2dp"
                    android:src="@drawable/logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

            </com.google.android.material.card.MaterialCardView>-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_weight="1.75"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:maxLines="1"
                    android:text="@string/demo_product_name"
                    android:textSize="16sp"
                    style="@style/Caption" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_alignParentStart="true"
                        android:textColor="@color/btn"
                        android:maxLines="1"
                        android:text="@string/demo_price"
                        android:textSize="14sp"
                        style="@style/Caption" />
                    <TextView
                        android:layout_alignParentEnd="true"
                        android:maxLines="1"
                        android:text="@string/demo_date"
                        android:textSize="12sp"
                        style="@style/Caption" />
                </RelativeLayout>


                <TextView

                    android:textColor="@color/text_hint"
                    android:maxLines="2"
                    android:text="@string/demo_address"
                    android:textSize="12sp"
                    style="@style/Caption" />
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_baseline_more_vert_24"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>