<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".chat.SingleMessageActivity">
    <com.google.android.material.card.MaterialCardView
        app:cardElevation="3dp"
        android:layout_margin="5dp"
        style="@style/YourCardView"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/logo"
                app:civ_border_color="@color/texthint"
                app:civ_border_width="1dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_centerInParent="true"
                        style="@style/Caption"
                        android:text="@string/demo_name"
                        android:layout_alignParentStart="true"
                      />
                    <TextView
                        android:layout_centerInParent="true"
                        android:textColor="@color/basecolor"
                        style="@style/Caption"
                        android:textSize="9sp"
                        android:text="@string/demo_date"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <TextView
                    android:maxLines="1"
                    android:textColor="@color/text_hint"
                    style="@style/Caption"
                    android:text="@string/demo_text"
                  />

            </LinearLayout>

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

</LinearLayout>