<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".profile.MyProfileTab">



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/upperAndBottomColorCard"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/tex_tline"
                android:gravity="center">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/name"
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="Name :" />

                    <TextView
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/name"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="@string/demo_name" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                style="@style/upperAndBottomColorCard"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/tex_tline"
                android:gravity="center">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/email"
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="Phone no :" />

                    <TextView
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/email"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="@string/demo_phn" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                style="@style/upperAndBottomColorCard"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/tex_tline"
                android:gravity="center">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/nme"
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="Email :" />

                    <TextView
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/nme"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="@string/demo_email" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                style="@style/upperAndBottomColorCard"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/tex_tline"
                android:gravity="center">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ame"
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="Gender :" />

                    <TextView
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/ame"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="Female" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                style="@style/upperAndBottomColorCard"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/tex_tline"
                android:gravity="center">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/nae"
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="Date of Birth :" />

                    <TextView
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/nae"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="@string/demo_date" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                style="@style/upperAndBottomColorCard"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/tex_tline"
                android:gravity="center">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/nam"
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="Lives in :" />

                    <TextView
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/nam"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="@string/demo_address" />
                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/full_address"
                    style="@style/Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Full address (optional):" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/YourCardView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    app:strokeColor="@color/texthint"
                    app:strokeWidth="1dp">

                    <TextView
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/demo_address" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>


        </LinearLayout>




</ScrollView>